# llmspend

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GROWTH-PLAYBOOK.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: add-provider.md  bug-report.md  feature-request.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
sdk/: README.md  pyproject.toml
sdk/llmspend/: __init__.py  cli.py  dashboard.py  monitor.py  pricing.py  router.py  transport.py
sdk/tests/: test_pricing.py
